--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Khello!</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/jfKfPfyJRdk?si=3E-mUx6_3LECSxi3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="wrapper">
+        <h1>Hello world!</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jfKfPfyJRdk?si=3E-mUx6_3LECSxi3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
     
 </body>
 </html>
