update pz1 pz2 pz3

--- a/HTML/Lesson1/pz1.html
+++ b/HTML/Lesson1/pz1.html
@@ -2,24 +2,44 @@
 <html>
     <head>  
        <meta charset="utf-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0"
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <meta name="description" content="Vehicle">
        <meta name="keywords" content="page, html, base structure">
        <meta name="Yuliya Zavorokhina">
        <title>Vehicle</title>
-
+           <style>
+            p {
+                color: rgb(0, 0, 0);
+                padding: 5px;
+            }
+            </style>
+            <style>
+            article {
+                color: rgb(0, 0, 0);
+                background-color: rgb(207, 207, 207);
+                padding: 20px;
+                border: 1px solid black;
+            }
+            </style>
     </head>
 
     <body> 
-<h1>Vehicle</h1>
-<p><b>Lorem</b> ipsum <i>dolor</i> <sup><a href="">[1]</a></sup> sit amet <u>consectetur</u> adipisicing elit. Blanditiis illo saepe porro eveniet asperiores impedit natus delectus tempora harum laborum, totam nulla excepturi ut minima in velit odio nesciunt molestias!<sup><a href="">[2]</a></sup></p>
-<p><b>Lorem</b> ipsum <big>dolor</big> sit amet <s>consectetur</s> adipisicing elit. Blanditiis illo saepe porro eveniet asperiores impedit natus delectus tempora harum laborum, totam nulla excepturi ut minima in velit odio nesciunt molestias!<sup><a href="">[3]</a></sup></p>
-<p><strong>Lorem</strong> ipsum dolor sit amet consectetur, adipisicing elit. Pariatur excepturi recusandae, voluptate eveniet reiciendis fugit ex sunt ipsa optio deleniti omnis rem laboriosam exercitationem a voluptatibus facilis harum accusantium architecto?
-Eveniet suscipit ipsam fugit <em>natus</em> deserunt magni dolor quia magnam blanditiis sit vel et praesentium, rerum repellendus laudantium! Eum, fugit. Quasi voluptate libero ipsum, unde deleniti illo atque minima nesciunt?</p>
-<hr>
-<p><small>[1] - Lorem ipsum dolor sit amet consectetur adipisicing elit.</small></p>
-<p><small>[2] - Lorem ipsum dolor sit amet consectetur adipisicing elit.</small></p>
-<p><small>[3] - Lorem ipsum dolor sit amet consectetur adipisicing elit.</small></p>
+        <article align="center" style="width: 800px;";>   
+            <h1><strong>Vehicle</strong></h1>
 
+            <p align="left" style="width: 780px;">A vehicle (from Latin: vehiculum <sup><a href="">[1]</a></sup>) is a machine that transports people or cargo. Vehicles include wagons,
+            bicycles, motor vehicles (motorcycles, cars, trucks, buses), railed vehicles (trains, trams), watercraft (ships,
+            boats), amphibious vehicles (screw-propelled vehicle, hovercraft), aircraft (airplanes, helicopters) and
+            spacecraft.<sup><a href="">[2]</a></sup></p>
+
+            <p align="left" style="width: 780px;">Land vehicles are classified broadly by what is used to apply steering and drive forces against the ground:
+            wheeled, tracked, railed or skied. ISO 3833-1977 is the standard, also internationally used in legislation, for
+            road vehicles types, terms and definitions.<sup><a href="">[3]</a></sup></p>
+
+            <hr align="left" style="width: 780px; color: rgb(184, 184, 184);">
+            <p><small>[1] - "vehicle, n.", OED Online, Oxford University Press, November 2010</small></p>
+            <p><small>[2] - Halsey, William D. (Editorial Director): MacMillan Contemporary Dictionary, page 1106. MacMillan Publishing, 1979. ISBN 0-02-080780-5</small></p>
+            <p><small>[3] - ISO 3833:1977 Road vehicles - Types - Terms and definitions Webstore.anis.org</small></p>
+        </article>
     </body>
 </html>  
