--- a/HTML/Lesson1/pz3.html
+++ b/HTML/Lesson1/pz3.html
@@ -2,26 +2,61 @@
 <html>
     <head>  
        <meta charset="utf-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0"
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <meta name="description" content="Mathematical formulas">
        <meta name="keywords" content="page, html, base structure">
        <meta name="Yuliya Zavorokhina">
        <title>Mathematical formulas</title>
-
+            <style>
+            p {
+                padding: 5px;
+            }
+            </style>
+            <style>
+            article {
+                background-color: rgb(207, 207, 207);
+                padding: 20px;
+                border: 1px solid black;
+            }
+            </style>
+            <style>
+            mark {
+            background-color: rgb(218, 171, 171);
+            color: black;
+            } 
+            </style>
     </head>
 
     <body> 
-<h1 align="center">Mathematical formulas</h1>
-<h2>Linear Equations</h2>
-<p> A linear equation is any equation that can be written in the form</p>
-<p align="center"><mark>ax + b = 0</mark></p>
-<p> A linear equation is any equation that can be written in the form. A linear equation is any equation that can be written in the form. A linear equation is any equation that can be written in the form.</p>
-<h2>Quadratic Equations</h2>
-<p> A linear equation is any equation that can be written in the form:</p>
-<p align="center"><mark>ax<sup>2</sup> + bx = 0</mark></p>
-<p> A linear equation is any equation that can be written in the form:</p>
-<h2>The area of a circle (A)</h2>
-<p> <font color=red>&pi;</font> (Pi) times the radius (</p>
+        <article align="center" style="width: 800px;";> 
+            <h1 align="center">Mathematical formulas</h1>
 
+            <h4>Linear Equations</h4>
+            <p> A linear equation is any equation that can be written in the form</p>
+            <p align="center"><mark>ax + b = 0</mark></p>
+            <p> where <font color=#8c0d00><strong><i>a</i></strong></font> and <font color=#8c0d00><strong><i>b</i></strong></font> are real numbers and <font color=#8c0d00><strong><i>x</i></strong></font> is a variable. This form is sometimes called the standard form of a linear
+            equation. Note that most linear equations will not start off in this form. Also, the variable may or may not be an <font color=#8c0d00><strong><i>x</i></strong></font>
+            so don't get too locked into always seeing an <font color=#8c0d00><strong><i>x</i></strong></font> there.
+            </p>
+            
+            <h4>Quadratic Equations</h4>
+            <p> The standard form of a quadratic equation looks like this:</p>
+            <p align="center"><mark>ax<sup>2</sup> + bx + c = 0</mark></p>
+            <p> where <font color=#8c0d00><strong><i>a</i></strong></font>, <font color=#8c0d00><strong><i>b</i></strong></font>, <font color=#8c0d00><strong><i>c</i></strong></font> are known values and <font color=#8c0d00><strong><i>x</i></strong></font> is the variable or unknown (we don't know it yet). Also, <font color=#8c0d00><strong><i>a</i></strong></font> can't be 0.</p>
+            
+            <h4>The area of a circle (A)</h4>
+            <p> <font color=#8c0d00><strong><i>&pi;</i></strong></font> (Pi) times the radius (<font color=#8c0d00><strong><i>r</i></strong></font>) squared:</p>
+            <p align="center"><mark>A = &pi; &times; r<sup>2</sup></mark></p>
+            <p> <font color=#8c0d00></font> or, when you know the diameter (<font color=#8c0d00><strong><i>D</i></strong></font>):</p>
+            <p align="center"><mark>A = (&pi; 	&frasl; 4)  &times; D<sup>2</sup></mark></p>
+            <p> <font color=#8c0d00></font> or, when you know the circumference (<font color=#8c0d00><strong><i>C</i></strong></font>):
+            <p align="center"><mark>A = C<sup>2</sup> 	&frasl;  4 &times; &pi;</mark></p>
+
+            <h4>Intersection</h4>
+            <p> <font color=#8c0d00></font> The intersection of two sets <font color=#8c0d00><strong><i>A</i></strong></font> and <font color=#8c0d00><strong><i>B</i></strong></font>, denoted by A 	&cap;  B, is the set of all objects that are members of both the sets
+            A and B. In symbols,</p>
+            <p align="center"><mark>A &cap; B = &#123; x : x &isin;  A and x &isin; B &#125;</mark></p>
+            <p>That is, <font color=#8c0d00><strong><i>x</i></strong></font> is an element of the intersection A &cap; B if and only if <font color=#8c0d00><strong><i>x</i></strong></font> is both an element of <font color=#8c0d00><strong><i>A</i></strong></font> and an element of <font color=#8c0d00><strong><i>B</i></strong></font>.</p>
+        </article>
     </body>
 </html>  
