--- a/HTML/Lesson1/pz1.html
+++ b/HTML/Lesson1/pz1.html
@@ -12,8 +12,6 @@
                 color: rgb(0, 0, 0);
                 padding: 5px;
             }
-            </style>
-            <style>
             article {
                 color: rgb(0, 0, 0);
                 background-color: rgb(207, 207, 207);
@@ -24,7 +22,7 @@
     </head>
 
     <body> 
-        <article align="center" style="width: 800px;";>   
+        <article align="center" style="width: 800px;">   
             <h1><strong>Vehicle</strong></h1>
 
             <p align="left" style="width: 780px;">A vehicle (from Latin: vehiculum <sup><a href="">[1]</a></sup>) is a machine that transports people or cargo. Vehicles include wagons,
