--- a/HTML/Lesson1/pz2.html
+++ b/HTML/Lesson1/pz2.html
@@ -11,8 +11,6 @@
             p {
                 padding: 5px;
             }
-            </style>
-            <style>
             article {
                 background-color: rgb(207, 207, 207);
                 padding: 20px;
@@ -23,7 +21,7 @@
     </head>
 
     <body> 
-        <article align="center" style="width: 800px;";>  
+        <article align="center" style="width: 800px;">  
             <h1 align="center"><kbd>Lorem Ipsum</kbd></h1>
 
             <p align="right"><font color="black"><i>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</i></font></p>
