--- a/HTML/Lesson1/pz3.html
+++ b/HTML/Lesson1/pz3.html
@@ -11,15 +11,11 @@
             p {
                 padding: 5px;
             }
-            </style>
-            <style>
             article {
                 background-color: rgb(207, 207, 207);
                 padding: 20px;
                 border: 1px solid black;
             }
-            </style>
-            <style>
             mark {
             background-color: rgb(218, 171, 171);
             color: black;
@@ -28,7 +24,7 @@
     </head>
 
     <body> 
-        <article align="center" style="width: 800px;";> 
+        <article align="center" style="width: 800px;"> 
             <h1 align="center">Mathematical formulas</h1>
 
             <h4>Linear Equations</h4>
