update Lesson2_ pz1 pz2 pz3

--- a/HTML/Lesson2/pz2.html
+++ b/HTML/Lesson2/pz2.html
@@ -2,33 +2,101 @@
 <html>
     <head>  
        <meta charset="utf-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0"
-       <meta name="description" content="Seasons">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <meta name="description" content="Contents">
        <meta name="keywords" content="page, html, base structure">
        <meta name="Yuliya Zavorokhina">
        <link rel="icon" type="image/svg+xml" href="https://htmlbook.ru/themes/hb/ico/favicon.svg">
-       <title>Seasons</title>
+       <title>Contents</title>
        <style>
-        ul {
-         list-style-type: square; /* Квадратные маркеры */
+        li {
+        color: black;
+        font-weight: bold;
+        }
+        li span {
+        color: rgb(86, 83, 117); /* Цвет текста */
+        font-weight: 100;
+        }
+        article {
+        background-color: rgb(207, 207, 207);
+        padding: 20px;
+        font-size: small;
         }
        </style>
     <body> 
-        <h1><strong>Seasons</strong></h1>
-        <ol type="I">
-            <li>
-                History
-                <ol>
-                    <li>Development</li>
-                    <li>HTML
-                        <ol type="a">
-
-                        </ol>
-                    </li>
-                    <li>Development</li>
-                </ol>
-            </li>
-        </ol>
-        
+        <article align="center" style="width: 600px;">
+            <h4><strong>Contents</strong></h4>
+            <ol type="I">
+                <li><span>
+                    History
+                    <ol>
+                        <li><span>Development</span></li>
+                        <li><span>HTML versions timeline
+                            <ol type="a">
+                                <li><span>HTML draft version timeline</span></li>
+                                <li><span>XHTML versions</span></li>
+                            </ol>
+                        </span></li>
+                    </ol>
+                </span></li>
+                <li><span>
+                    Markup
+                    <ol>
+                        <li><span>Elements
+                            <ol type="a">
+                                <li><span>Element examples</span></li>
+                                <li><span>Attributes</span></li>
+                            </ol>
+                        </span></li>
+                        <li><span>Character and entity references
+                        </span></li>
+                        <li><span>Data types</span></li>
+                        <li><span>Document type declaration</span></li>
+                    </ol>
+                </span></li>
+                <li><span>
+                    Semantic HTML
+                </span></li>
+                <li><span>
+                    Delivery
+                    <ol>
+                        <li><span>HTTP</span></li>
+                        <li><span>HTML e-mail</span></li>
+                        <li><span>Naming conventions</span></li>
+                        <li><span>HTML Application</span></li>
+                    </ol>
+                </span></li>
+                <li><span>
+                    HTML4 variations
+                    <ol>
+                        <li><span>SGML-based versus XML-based HTML</span></li>
+                        <li><span>Transitional versus strict</span></li>
+                        <li><span>Frameset versus transitional</span></li>
+                        <li><span>Summary of specification versions</span></li>
+                    </ol>
+                </span></li>
+                <li><span>
+                    HTML5 variants
+                    <ol>
+                        <li><span>WHATWG HTML versus HTML5</span></li>
+                    </ol>
+                </span></li>
+                <li><span>
+                    Hypertext features not in HTML
+                </span></li>
+                <li><span>
+                    WYSIWYG editior
+                </span></li>
+                <li><span>
+                    See also
+                </span></li>
+                <li><span>
+                    References
+                </span></li>
+                <li><span>
+                    External links
+                </span></li>
+            </ol>
+        </article>
     </body>
 </html>
