--- a/HTML/Lesson2/tables.html
+++ b/HTML/Lesson2/tables.html
@@ -2,7 +2,7 @@
 <html>
     <head>  
        <meta charset="utf-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0"
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <meta name="description" content="Lists and Tables">
        <meta name="keywords" content="page, html, base structure">
        <meta name="Yuliya Zavorokhina">
@@ -22,7 +22,7 @@
             </thead>
             <tbody  align="center">
                 <tr bgcolor="orange">
-                    <td rowspan="4">1аппав</td>
+                    <td rowspan="4">hdfsl</td>
                     <td>пывп</td>
                     <td>пып</td>
                     <td>пкы</td>
