--- a/HTML/Lesson2/pz1.html
+++ b/HTML/Lesson2/pz1.html
@@ -2,49 +2,54 @@
 <html>
     <head>  
        <meta charset="utf-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0"
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <meta name="description" content="Seasons">
        <meta name="keywords" content="page, html, base structure">
        <meta name="Yuliya Zavorokhina">
        <link rel="icon" type="image/svg+xml" href="https://htmlbook.ru/themes/hb/ico/favicon.svg">
        <title>Seasons</title>
        <style>
-        ul {
-         list-style-type: square; /* Квадратные маркеры */
+        li {
+         list-style-type: none; /* маркеры отсутствуют */
+        }
+        article {
+            background-color: rgb(207, 207, 207);
+            padding: 20px;
         }
        </style>
     <body> 
-        <h1><strong>Seasons</strong></h1>
-        <ul>
-            <li> Winter
-                <ul>
-                    <li> &#10034;December</li>
-                    <li> &#10034;January</li>
-                    <li> &#10034;February</li>
-                </ul>
-            </li>
-            <li>Spring
-                <ul>
-                    <li> &#127799;December</li>
-                    <li> &#127799;January</li>
-                    <li> &#127799;February</li>
-                </ul>
-            </li>
-            <li>Summer
-                <ul>
-                    <li> &#127817;December</li>
-                    <li> &#127817;January</li>
-                    <li> &#127817;February</li>
-                </ul>
-            </li>
-            <li>Autumn
-                <ul>
-                    <li> &#127809;December</li>
-                    <li> &#127809;January</li>
-                    <li> &#127809;February</li>
-                </ul>
-            </li>
-        </ul>
-        
+        <article align="center" style="width: 400px;">
+        <h4><strong>Seasons</strong></h4>
+            <ul>
+                <li> &rsaquo; Winter
+                    <ul>
+                        <li> &#10052;December</li>
+                        <li> &#10052;January</li>
+                        <li> &#10052;February</li>
+                    </ul>
+                </li>
+                <li> &rsaquo; Spring
+                    <ul>
+                        <li> &#127799;March</li>
+                        <li> &#127799;April</li>
+                        <li> &#127799;May</li>
+                    </ul>
+                </li>
+                <li> &rsaquo; Summer
+                    <ul>
+                        <li> &#127817;June</li>
+                        <li> &#127817;July</li>
+                        <li> &#127817;August</li>
+                    </ul>
+                </li>
+                <li> &rsaquo; Autumn
+                    <ul>
+                        <li> &#127809;September</li>
+                        <li> &#127809;October</li>
+                        <li> &#127809;November</li>
+                    </ul>
+                </li>
+            </ul>
+        </article>
     </body>
 </html>
