update Lesson2 (pz1-pz3)

--- a/HTML/Lesson2/pz2.html
+++ b/HTML/Lesson2/pz2.html
@@ -22,9 +22,14 @@
         padding: 20px;
         font-size: small;
         }
+        .div-back{
+            background-color: #f5f5f5;
+            padding: 20px;
+            width: 600px;
+        }
        </style>
     <body> 
-        <article align="center" style="width: 600px;">
+        <div class="div-back">
             <h4><strong>Contents</strong></h4>
             <ol type="I">
                 <li><span>
@@ -97,6 +102,6 @@
                     External links
                 </span></li>
             </ol>
-        </article>
+        </div>
     </body>
 </html>
