--- a/HTML/Lesson2/pz3.html
+++ b/HTML/Lesson2/pz3.html
@@ -9,17 +9,13 @@
        <link rel="icon" type="image/svg+xml" href="https://htmlbook.ru/themes/hb/ico/favicon.svg">
        <title>Pz3_tables</title>
        <style>
-        article {
-        background-color: rgb(207, 207, 207);
-        padding: 20px;
-        }
         th {
-        padding-left: 50px;
-        font-weight: 100;
+            padding-left: 50px;
+            font-weight: 100;
         }
         td {
-        padding-left: 25px;
-        font-weight: 100;
+            padding-left: 25px;
+            font-weight: 100;
         }
         table{
            margin-bottom: 15px;
@@ -27,10 +23,15 @@
         p{
             margin-top: 20px;
         }
+        .div-back{
+            background-color: #f5f5f5;
+            padding: 20px;
+            width: 800px;
+        }
        </style>
     <body> 
-        <article align="center" style="width: 800px;">
-            <table width="100%" cellspacing="0" cellpadding="10" bgcolor="236568">
+        <div class="div-back">
+            <table width="100%" cellspacing="0" cellpadding="10" bgcolor="#0e494e">
                 <thead>
                     <tr style="color:white">
                         <th align="left" style="font-style: inherit;"><small>TAG</small></th>            
@@ -38,7 +39,7 @@
                 </thead>
                 <tbody  align="left">
                     <tr style="color:white">
-                        <td rowspan="4" bgcolor="43888b"><small>In information systems, a tag is a keyword or term assigned to a piece of information (such as an Internet bookmark, digital
+                        <td rowspan="4" bgcolor="#236162"><small>In information systems, a tag is a keyword or term assigned to a piece of information (such as an Internet bookmark, digital
                         image, database record, or computer file). This kind of metadata helps describe an item and allows it to be found again by
                         browsing or searching.<sup><a href="" style="color:rgb(221, 170, 161)">[1]</a></sup> Tags are generally chosen informally and personally by the item's creator or by its viewer,
                         depending on the system, although they may also be chosen from a controlled vocabulary.<sup><a href="" style="color:rgb(221, 170, 161)">[2]</a></sup></p>
@@ -46,7 +47,7 @@
                     </tr>
                 </tbody>
             </table>
-            <table width="100%" cellspacing="0" cellpadding="10" bgcolor="236568">
+            <table width="100%" cellspacing="0" cellpadding="10" bgcolor="#0e494e">
                 <thead>
                     <tr style="color:white">
                         <th align="left"><small>ATTRIBUTE</small></th>            
@@ -54,7 +55,7 @@
                 </thead>
                 <tbody  align="left">
                     <tr style="color:white">
-                        <td rowspan="4" bgcolor="43888b"><small>HTML attributes are special words used inside the opening tag to control the element's behaviour. HTML attributes are a
+                        <td rowspan="4" bgcolor="#236162"><small>HTML attributes are special words used inside the opening tag to control the element's behaviour. HTML attributes are a
                             modifier of an HTML element type. An attribute either modifies the default functionality of an element type or provides
                             functionality to certain element types unable to function correctly without them. In HTML syntax, an attribute is added to an
                             HTML start tag.
@@ -62,7 +63,7 @@
                     </tr>
                 </tbody>
             </table>
-            <table width="100%" cellspacing="0" cellpadding="10" bgcolor="236568">
+            <table width="100%" cellspacing="0" cellpadding="10" bgcolor="#0e494e">
                 <thead>
                     <tr style="color:white">
                         <th align="left"><small>ELEMENT</small></th>            
@@ -70,7 +71,7 @@
                 </thead>
                 <tbody  align="left">
                     <tr style="color:white">
-                        <td rowspan="4" bgcolor="43888b"><small>An HTML element is an individual component of an HTML (Hypertext Markup Language) document or web page.[vague]
+                        <td rowspan="4" bgcolor="#236162"><small>An HTML element is an individual component of an HTML (Hypertext Markup Language) document or web page.[vague]
                             HTML is composed of a tree of HTML nodes, such as text nodes. Each node can have HTML attributes specified. Nodes can.
                             also have content, including other nodes and text. Many HTML nodes represent semantics, or meaning. For example, the
                             &lt title &gt node represents the title of the document.
@@ -78,11 +79,11 @@
                     </tr>
                 </tbody>
             </table>
-            <p><small><strong>[1]</strong> - Some users, however, see tags not as metadata but as “just move content”: Berendt, Bettina; Hanser, Christoph (2007). "Tags are not metadata, but 'just more content'— to
+            <p align="left"><small><strong>[1]</strong> - Some users, however, see tags not as metadata but as “just move content”: Berendt, Bettina; Hanser, Christoph (2007). "Tags are not metadata, but 'just more content'— to
                 some people" (PDF). Proceedings of the International Conference on Weblogs and Social Media (IC WSM), Boulder, Colorado, USA, March 26-28, 2007. Menlo Park, CA:
                 Intemational Joint Conferences on Artificial Intelligence. OCLC 799635978.
             </small></p>
-            <p><small><strong>[2]</strong> - Smith, Gene (2008). Tagging: people-powered metadata forthe social web. Berkeley: New Riders Press, ISBN 9780321529176, OCLC 154806677.</small></p>
-        </article>
+            <p align="left"><small><strong>[2]</strong> - Smith, Gene (2008). Tagging: people-powered metadata forthe social web. Berkeley: New Riders Press, ISBN 9780321529176, OCLC 154806677.</small></p>
+        </div>
     </body>
 </html>
