--- a/HTML/Lesson2/pz1.html
+++ b/HTML/Lesson2/pz1.html
@@ -16,9 +16,14 @@
             background-color: rgb(207, 207, 207);
             padding: 20px;
         }
+        .div-back{
+            background-color: #f5f5f5;
+            padding: 20px;
+            width: 400px;
+        }
        </style>
     <body> 
-        <article align="center" style="width: 400px;">
+        <div class="div-back">
         <h4><strong>Seasons</strong></h4>
             <ul>
                 <li> &rsaquo; Winter
@@ -50,6 +55,6 @@
                     </ul>
                 </li>
             </ul>
-        </article>
+        </div>
     </body>
 </html>
