--- a/HTML/Lesson2/pz3.html
+++ b/HTML/Lesson2/pz3.html
@@ -24,7 +24,7 @@
             margin-top: 20px;
         }
         .div-back{
-            background-color: #f5f5f5;
+            background-color: #bebebe;
             padding: 20px;
             width: 800px;
         }
