update Lesson 6 Homework 3

--- a/CSS/Lesson6/homework3_2.html
+++ b/CSS/Lesson6/homework3_2.html
@@ -9,89 +9,90 @@
 <body>
     <div align="center" class="background">
         <div class="background2">
-            <h3 align="left">My To Do List</h3>
+            <h4 align="left">My To Do List</h4>
             <div align="left" class="rowblue">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox1"></span>
+                    <!--<span class="checkbox"><input type="checkbox" id="checkbox1"></span>-->
+                    <span class="checkbox">&#x2610;</span>
                     <span class="task">Hit the gym</span>    
-                    <span class="marks"><small>&#x2716;</small></span>    
+                    <span class="marks"><small>&#x2716;</small></span> 
                 </div>
             </div>
             <div align="left" class="rowgrey">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox2"></span>
+                    <span class="checkbox">&#x2611;</span>
                     <span class="task"><s>Pay bills</s></span>       
-                    <span class="marks">&#x2716;</span>       
+                    <span class="marks"><small>&#x2716;</small></span>       
                 </div>
             </div>
             <div align="left" class="rowblue">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox3"></span>
+                    <span class="checkbox">&#x2610;</span>
                     <span class="task">Meet John</span> 
-                    <span class="marks">&#x2716;</span>              
+                    <span class="marks"><small>&#x2716;</small></span>              
                 </div>
             </div>
             <div align="left" class="rowlightblue">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox4"></span>
+                    <span class="checkbox">&#x2610;</span>
                     <span class="task">Buy eggs</span> 
-                    <span class="marks">&#x2716;</span>      
+                    <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
             <div align="left" class="rowgrey">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox5"></span>
+                    <span class="checkbox">&#x2611;</span>
                     <span class="task"><s>Read a book</s></span> 
-                    <span class="marks">&#x2716;</span>      
+                    <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
             <div align="left" class="rowlightblue">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox6"></span>
+                    <span class="checkbox">&#x2610;</span>
                     <span class="task">Organize office</span> 
-                    <span class="marks">&#x2716;</span>      
+                    <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
             <div align="left" class="rowblue">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox6"></span>
+                    <span class="checkbox">&#x2610;</span>
                     <span class="task">Eat dinner</span> 
-                    <span class="marks">&#x2716;</span>      
+                    <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
             <div align="left" class="rowlightblue">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox7"></span>
+                    <span class="checkbox">&#x2610;</span>
                     <span class="task">Buy apples</span> 
-                    <span class="marks">&#x2716;</span>      
+                    <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
             <div align="left" class="rowblue">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox8"></span>
+                    <span class="checkbox">&#x2610;</span>
                     <span class="task">Meet George</span> 
-                    <span class="marks">&#x2716;</span>      
+                    <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
             <div align="left" class="rowlightblue">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox9"></span>
+                    <span class="checkbox">&#x2610;</span>
                     <span class="task">Feed the cat</span> 
-                    <span class="marks">&#x2716;</span>      
+                    <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
             <div align="left" class="rowgrey">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox10"></span>
+                    <span class="checkbox">&#x2611;</span>
                     <span class="task"><s>Write a letter</s></span> 
-                    <span class="marks">&#x2716;</span>      
+                    <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
             <div align="left" class="rowlightblue">
                 <div>
-                    <span class="checkbox"><input type="checkbox" id="checkbox11"></span>
+                    <span class="checkbox">&#x2610;</span>
                     <span class="task">Run 1 km</span> 
-                    <span class="marks">&#x2716;</span>      
+                    <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
         </div>
