--- a/CSS/Lesson6/homework3_3.html
+++ b/CSS/Lesson6/homework3_3.html
@@ -7,23 +7,44 @@
     <link rel="stylesheet" href="./css/homework3_3.css">
 </head>
 <body>
-    <div align="center" class="div-back">
-        <h2><strong>TAG</strong></h2>
-        <h4>&#91;t&#230;g&#93;</h4>
-            <ul>
-                <li> noun
+    <div align="center" class="background">
+        <div align="left" class="background2">
+            <h3 align="left"><strong>TAG</strong></h3>
+            <h4 align="left">&#91;t&#230;g&#93;</h4>
+
+            <!--Список описаний-->
+            <dl>
+                <dt align="left"><i>noun</i></dt><br>
+                <dd>
+                    <!--Нумерованный список-->
                     <ol>
-                        <li><p> a label...</p></li>
-                        <li><p> a small...</p></li>
+                        <li>a label attached to someone or something for the purpose of identification or to give other information.<br>
+                        <font color=#928d92>“he gave his pet a collar with a metal name tag”</font><br>
+                        synonyms: <font color=#3f2ea3>label, ticket, badge, mark, marker, tab, tally, sticker, docket, stub, chit, chitt, counterfoi, flag, stamp</font><br>
+                        <font color=#928d92>“a price tag”</font>
+                        </li>
+                        <li>a small piece or part that is attached to a main body.</li><br>
                     </ol>
-                </li>
-                <li> verb
+                </dd>
+
+                <dt align="left"><i>verb</i></dt><br>
+                <dd>
+                    <!--Нумерованный список-->
                     <ol>
-                        <li><p> attach a label...</p></li>
-                        <li><p>add to something...</p></li>
+                        <li>attach a label to.<br>
+                            <font color=#928d92>“mothers suspected that their babies had been wrongly tagged during an alarm at the hospital"</font><br>
+                            synonyms: <font color=#3f2ea3>label, attach tags to, put a label on, mark, ticket, earmark, identify, docket, flag, indicatel</font><br>
+                            <font color=#928d92>“the bottles were tagged with colour-coded labels”</font>
+                        </li>
+                        <li>add to something, especially as an afterthought or with no real connection.<br>
+                            <font color=#928d92>“she meant to <strong>tag</strong> her question on at the end of her remarks”</font><br>
+                            synonyms: <font color=#3f2ea3>add, tack, join, attach, append, affix, annex</font><br>
+                            <font color=#928d92>“their heads were so large that the rest of their bodies seemed <strong>tagged on</strong> as an afterthought”</font><br>
+                        </li>
                     </ol>
-                </li>
-            </ul>
+                </dd>
+            </dl>
         </div>
+    </div>
 </body>
 </html>
