--- a/CSS/Lesson8/pz_registration_form.html
+++ b/CSS/Lesson8/pz_registration_form.html
@@ -4,22 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
+    <title>Registration form</title>
+    <link rel="stylesheet" href="./pz_registration_form.css">
 </head>
 <body>
-    <div align="center" class="form">
-        <form action="">
-                <input type="text" name="fio" placeholder="Ваше имя" required/>    
-                <br>
+    <div class="form">
+        <form action="" id="registration_form">
+                <input type="text" name="fio" placeholder="Ваше имя" required/>   
                 <input type="email" name="email" placeholder="Ваше email" required/> 
-                <br>
-                <input type="password" name="password"  placeholder="Ваш телефон" required/>
-                <br>
+                <input type="tel" name="password"  placeholder="Ваш телефон" required/>
                 <input type="password" name="password"  placeholder="Пароль" required/>
-                <br>
                 <input type="password" name="password"  placeholder="Пароль еще раз" required/>
-                <br>
-                <button type="submit" class="btn">Регистрация</button>
+                <button type="submit" class="button">Регистрация</button>
         </form>
     </div>
 </body>
