--- a/CSS/Lesson8/pz1_6_registration_form.html
+++ b/CSS/Lesson8/pz1_6_registration_form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration form</title>
-    <link rel="stylesheet" href="./pz_registration_form.css">
+    <link rel="stylesheet" href="./pz1_6_registration_form.css">
 </head>
 <body>
     <div class="form">
