--- a/CSS/Lesson8/pz1_8_ breadcrumb.html
+++ b/CSS/Lesson8/pz1_8_ breadcrumb.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breadcrumb</title>
-    <link rel="stylesheet" href="./pz_ breadcrumb.css">
+    <link rel="stylesheet" href="./pz1_8_breadcrumb.css">
 </head>
 <body>
     <div class="breadcrumb" id="breadcrumb">
