--- a/CSS/Lesson10/dropDownMenu.html
+++ b/CSS/Lesson10/dropDownMenu.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DropDownMenu</title>
-    <link rel="stylesheet" href="../../normalize.css">
+    <link rel="stylesheet" href="../../normilize.css">
     <link rel="stylesheet" href="./dropDownMenu.css">
 </head>
+
 <body>
     <div class=container>
-        <h1>Неанимированное выпадающее меню на CSS</h1>
+        <h1>Неанимированное выпадающее меню на CSS3</h1>
         <nav>
             <ul>
                 <li><a href="">Главная</a></li>
@@ -23,7 +25,7 @@
                                 <li class="triangle-left">
                                     <a href="">Подпункт11</a>
                                 </li>
-                                
+
                                 <li><a href="">Подпункт12</a></li>
                                 <li><a href="">Подпункт13</a></li>
                                 <li><a href="">Подпункт14</a></li>
@@ -33,61 +35,77 @@
                             <a href="">Дизайн</a>
                             <ul>
                                 <li class="triangle-left">
-                                    <a href="">Подпункт11</a>
+                                    <a href="">Подпункт21</a>
                                 </li>
-                                <li><a href="">Подпункт12</a></li>
-                                <li><a href="">Подпункт13</a></li>
-                                <li><a href="">Подпункт14</a></li>
+                                <li><a href="">Подпункт22</a></li>
+                                <li><a href="">Подпункт23</a></li>
+                                <li><a href="">Подпункт24</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="">Разработка</a>
                             <ul>
-                                <li><a href="">Подпункт11</a></li>
-                                <li><a href="">Подпункт12</a></li>
-                                <li><a href="">Подпункт13</a></li>
-                                <li><a href="">Подпункт14</a></li>
+                                <li class="triangle-left">
+                                    <a href="">Подпункт31</a>
+                                </li>
+                                <li><a href="">Подпункт32</a></li>
+                                <li><a href="">Подпункт33</a></li>
+                                <li><a href="">Подпункт34</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="">Сервис</a>
+                            <a href="">Сервисы</a>
                             <ul>
-                                <li><a href="">Подпункт11</a></li>
-                                <li><a href="">Подпункт12</a></li>
-                                <li><a href="">Подпункт13</a></li>
-                                <li><a href="">Подпункт14</a></li>
+                                <li class="triangle-left">
+                                    <a href="">Подпункт41</a>
+                                </li>
+                                <li><a href="">Подпункт42</a></li>
+                                <li><a href="">Подпункт43</a></li>
+                                <li><a href="">Подпункт44</a></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="">Portfolio</a>
-                    <ul>
-                        <li><a href="">Submenu1</a></li>
-                        <li><a href="">Submenu2</a></li>
-                        <li><a href="">Submenu3</a></li>
-                    </ul>
-                </li>
-                <li>
+                <li class="subMenu">
                     <a href="">Работы</a>
                     <ul>
-                        <li><a href="">Работа1</a></li>
-                        <li><a href="">Работа2</a></li>
-                        <li><a href="">Работа3</a></li>
+                        <li class="triangle">
+                            <a href="">Живопись</a>
+                            <ul>
+                                <li class="triangle-left">
+                                    <a href="">Модерн</a>
+                                </li>
+
+                                <li><a href="">Пуантилизм</a></li>
+                                <li><a href="">Кубизм</a></li>
+                                <li><a href="">Минимализм</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">Фотография</a>
+                            <ul>
+                                <li>
+                                    <a class="triangle-left" href="">Черно-белая</a>
+                                    <ul>
+                                        <li class="triangle-left">
+                                            <a href="">Портрет</a>
+                                        </li>
+                                        <li><a href="">Архитектура</a></li>
+                                        <li><a href="">Интерьер</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="">Репортажная</a></li>
+                                <li><a href="">Студийная</a></li>
+                                <li><a href="">Фудфотография</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="">Об авторе</a>
-                </li>
+                <li><a href="">Об авторе</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <div class="triangle">
-
-        </div>
-        <div class="triangle-left">
-
-        </div>
     </div>
 </body>
+
 </html>
