update file names

--- a/CSS/Lesson10/pz3_1_dropDownMenu.html
+++ b/CSS/Lesson10/pz3_1_dropDownMenu.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DropDownMenu</title>
     <link rel="stylesheet" href="../../normilize.css">
-    <link rel="stylesheet" href="./dropDownMenu.css">
+    <link rel="stylesheet" href="./pz3_1_dropDownMenu.css">
 </head>
 
 <body>
