--- a/CSS/Lesson10/pz3_3_button and marker.html
+++ b/CSS/Lesson10/pz3_3_button and marker.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button and marke</title>
     <link rel="stylesheet" href="../../normilize.css">
-    <link rel="stylesheet" href="./pz_3_3_button and marker.css">
+    <link rel="stylesheet" href="./pz3_3_button and marker.css">
 </head>
 
 <body>
