--- a/CSS/Lesson10/pz3_4_UpButton.html
+++ b/CSS/Lesson10/pz3_4_UpButton.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UpButton</title>
     <link rel="stylesheet" href="../../normilize.css">
-    <link rel="stylesheet" href="./pz_3_4_UpButton.css">
+    <link rel="stylesheet" href="./pz3_4_UpButton.css">
 </head>
 
 <body>
